--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -44,6 +44,7 @@ add_executable(${PROJECT_NAME} "main.cpp"
                 "vo/uint256.cpp"             
                 "util/strencodings.cpp"
                 "crypto/sha1.h"
+                "crypto/sha256.h"
                 "crypto/common.h"
                 "compat/byteswap.h"
                 "compat/endian.h"
@@ -55,6 +56,7 @@ add_executable(${PROJECT_NAME} "main.cpp"
                 "vo/uint256.h"              
                 "util/strencodings.h"
                 "crypto/sha1.cpp"
+                "crypto/sha256.cpp"
 
                 "../include/secp256k1/secp256k1.h"
     )
