--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -50,6 +50,7 @@ ENDIF(WIN32)
 add_executable(${PROJECT_NAME} "main.cpp"
                 "vo/uint256.cpp"             
                 "util/strencodings.cpp"
+                "util/url.cpp"
                 "crypto/sha1.cpp"
                 "crypto/sha256.cpp"
                 "crypto/sha512.cpp"
@@ -61,6 +62,9 @@ add_executable(${PROJECT_NAME} "main.cpp"
                 "crypto/siphash.cpp"
                 "crypto/ctaes/ctaes.c"
                 "crypto/aes.cpp"
+                "crypto/chacha20.cpp"
+                "crypto/hmac_sha512.cpp"
+                "crypto/ripemd160.cpp"
                 "test/crypto_test.cpp"
     
                 "config/bcex_config.h"
@@ -68,6 +72,7 @@ add_executable(${PROJECT_NAME} "main.cpp"
 
                 "vo/uint256.h"              
                 "util/strencodings.h"
+                "util/url.h"
                 "util/tinyformat.h"
                 "crypto/ctaes/ctaes.h"
                 "crypto/sha1.h"
@@ -77,6 +82,9 @@ add_executable(${PROJECT_NAME} "main.cpp"
                 "crypto/aes.h"
                 "crypto/hmac_sha256.h"
                 "crypto/common.h"
+                "crypto/chacha20.h"
+                "crypto/hmac_sha512.h"
+                "crypto/ripemd160.h"
                 "compat/byteswap.h"
                 "compat/endian.h"
     )
